[JBIDE-7916] added ability to refresh several clouds
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27980 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,9 @@
+2011-01-07  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* plugin.xml: 
+	* src/org/jboss/tools/deltacloud/ui/commands/RefreshCloudHandler.java (execute): 
+	[JBIDE-7916] added ability to refresh several clouds
+
 2011-01-06  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/ui/views/cloud/ImagesCategoryItem.java (.doRun): 
