https://issues.jboss.org/browse/JBIDE-8048
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27984 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpel/plugins/org.eclipse.bpel.common.ui/src/org/eclipse/bpel/common/ui/messages.properties
+++ b/bpel/plugins/org.eclipse.bpel.common.ui/src/org/eclipse/bpel/common/ui/messages.properties
@@ -31,9 +31,7 @@ CalendarControl_title={0} {1}
 SynchronizationManager_refresh_title=File Changed
 CompositeEditor_Cannot_disconnect_active_editor=Cannot disconnect active editor\: {0}
 # https://jira.jboss.org/browse/JBIDE-7520
-SynchronizationManager_refresh_message=The file {0} \n
-     has been changed on the file system.\n
-     Do you want to load the changes?
+SynchronizationManager_refresh_message=The file {0} has been changed on the file system. Do you want to load the changes?
 SynchronizationManager_saveButtonLabel=Save
 CompositeEditorManager_5=Embedded editors must provide an id. Ignoring editor.
 DatePicker_noDateSelected=None
