--- a/bpel/plugins/org.eclipse.bpel.validator/src/org/eclipse/bpel/validator/rules/messages.properties
+++ b/bpel/plugins/org.eclipse.bpel.validator/src/org/eclipse/bpel/validator/rules/messages.properties
@@ -626,10 +626,10 @@ BPELC_PLT__NO_PORT_TYPE.fix = The {3} must be defined or the value of this {3} m
 #  {0} : node
 #  {1} : fault QName
 BPELC_CATCH__STANDARD_FAULT.summary = Standard fault "{1}" cannot be \
-  handled in <{0}> when existOnStandardFaults is set to yes.
+  handled in <{0}> when exitOnStandardFaults is set to yes.
 BPELC_CATCH__STANDARD_FAULT = Standard fault "{1}" cannot be \
-  handled in <{0}> when existOnStandardFaults is set to yes.
-BPELC_CATCH__STANDARD_FAULT.fix = Remove the handler or disable exit on standard faults.
+  handled in <{0}> when exitOnStandardFaults is set to yes.
+BPELC_CATCH__STANDARD_FAULT.fix = Remove the handler or set "Exit On Standard Faults" to "No" for this process.
 #
 # BPELC_CATCH__EXIST
 #  {0}: node name
