[JBIDE-7557] implemented capability to stop the running instances out of a bunch of instances (running and stopped ones)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27990 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,11 +1,15 @@
 2011-01-07  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* plugin.xml: 
+	* src/org/jboss/tools/deltacloud/ui/commands/StopInstanceHandler.java 
+	(stopWithDialog): 
+	(getRunningInstances): 
+	[JBIDE-7557] implemented capability to stop the running instances out of a bunch of instances (running and stopped ones) 
 	* src/org/jboss/tools/deltacloud/ui/commands/StartInstanceHandler.java 
 	(startWithDialog): 
 	(getStoppedInstances): 
 	[JBIDE-7557] implemented capability to start the stopped instances out of a bunch of instances (running and stopped ones) 
-		
-	* plugin.xml: 
+	
 	* src/org/jboss/tools/deltacloud/ui/commands/RefreshCloudHandler.java (execute): 
 	[JBIDE-7916] added ability to refresh several clouds
 
