[JBIDE-7557] implemented capability to reboot the running instances out of a bunch of instances (running and stopped ones)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27991 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,6 +1,11 @@
 2011-01-07  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* plugin.xml: 
+	* src/org/jboss/tools/deltacloud/ui/commands/RebootInstanceHandler.java 
+	(rebootWithDialog): 
+	(getRunningInstances): 
+	[JBIDE-7557] implemented capability to stop the running instances out of a bunch of instances (running and stopped ones) 
+	* plugin.xml: 
 	* src/org/jboss/tools/deltacloud/ui/commands/StopInstanceHandler.java 
 	(stopWithDialog): 
 	(getRunningInstances): 
