--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,9 +1,14 @@
 2011-01-07  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* plugin.xml: 
+	* src/org/jboss/tools/deltacloud/ui/commands/DestroyInstanceHandler.java 
+	(destroyWithDialog): 
+	(getDestroyableInstances): 
+	[JBIDE-7557] implemented capability to stop the running instances out of a bunch of instances (running and stopped ones) 
+	* plugin.xml: 
 	* src/org/jboss/tools/deltacloud/ui/commands/RebootInstanceHandler.java 
 	(rebootWithDialog): 
-	(getRunningInstances): 
+	(getRebootableInstances): 
 	[JBIDE-7557] implemented capability to stop the running instances out of a bunch of instances (running and stopped ones) 
 	* plugin.xml: 
 	* src/org/jboss/tools/deltacloud/ui/commands/StopInstanceHandler.java 
