--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,9 @@
+2011-01-10  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/core/client/unmarshal/HardwareProfileUnmarshaller.java: 
+	* src/org/jboss/tools/deltacloud/core/client/DeltaCloudClientImpl.java (listProfile):
+	[JBIDE-7935] moved HardwareProfile unmarshalling to HardwareProfileUnmarshaller 
+
 2011-01-04  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/core/DeltaCloudInstancesRepository.java: 
