https://issues.jboss.org/browse/JBIDE-8045
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28052 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpel/plugins/org.eclipse.bpel.ui/src/org/eclipse/bpel/ui/messages.properties
+++ b/bpel/plugins/org.eclipse.bpel.ui/src/org/eclipse/bpel/ui/messages.properties
@@ -248,6 +248,7 @@ FaultCatchNameDetails_Namespace__21=Na&mespace\:
 FaultCatchNameDetails_User_defined_15=&User-defined
 FaultCatchNameSection_Variable_Name_3=Variable Name\:
 FaultCatchNameSection_None_0=(none)
+FaultCatchNameSection_Error_Invalid_Type=Data caught by a Fault Handler must be a Message Type or an XSD Element
 FaultHandlerAdapter_Fault_Handlers_1=Fault Handlers
 FaultThrowNameDetails_Built_in_14=&Built-in
 FaultThrowNameDetails_Fault_Name__16=Faul&t Name\:
