[JBIDE-7935] moved realms unmarshalling to separate classes (and added tests).
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28093 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,5 +1,8 @@
 2011-01-11  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/deltacloud/core/client/DeltaCloudClientImpl.java 
+	(listRealms): 
+	[JBIDE-7935] moved realms unmarshalling to separate classes (and added tests).
 	* src/org/jboss/tools/deltacloud/core/client/request/TypeRequest.java: 
 	* src/org/jboss/tools/deltacloud/core/client/request/PerformInstanceActionRequest.java: 
 	* src/org/jboss/tools/deltacloud/core/client/request/ListRealmsRequest.java: 
