[JBIDE-8080] fixed bug when filtering images: returned array that is too large
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28103 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-11  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/ui/views/cloud/ImagesCategoryItem.java (filter): 
+	[JBIDE-8080] fixed bug when filtering images: returned array that is too large
+
 2011-01-07  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* plugin.xml: 
