[JBIDE-8091] fixed bug when filtering instances: returned array that is too large
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28104 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,7 @@
 2011-01-11  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/deltacloud/ui/views/cloud/InstancesCategoryItem.java (filter): 
+	[JBIDE-8091] fixed bug when filtering instances: returned array that is too large
 	* src/org/jboss/tools/deltacloud/ui/views/cloud/ImagesCategoryItem.java (filter): 
 	[JBIDE-8080] fixed bug when filtering images: returned array that is too large
 
