[JBIDE-8081] refreshing keys now uses the wizards progress monitor and disables the widgets while refreshing is running
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28118 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,9 @@
+2011-01-12  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/ManageKeysPageModel.java (asyncGetKeys): 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/ManageKeysPage.java (refreshKeys):
+	[JBIDE-8081] refreshing keys now uses the wizards progress monitor and disables the widgets while refreshing is running 
+
 2011-01-11  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/ui/views/cloud/InstancesCategoryItem.java (filter): 
