[JBIDE-8096] adding the key that was selected to launch the instance to the ssh-prefs
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28132 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,10 @@
 2011-01-12  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstanceWizard.java 
+	(performFinish): 
+	(addToSshPrefs): 
+	[JBIDE-8096] adding the key that was selected to launch the instance to the ssh-prefs 
+	(was: key was added when creating it, now: adding it when it gets selected)
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/ManageKeysPageModel.java (asyncGetKeys): 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/ManageKeysPage.java (refreshKeys):
 	[JBIDE-8081] refreshing keys now uses the wizards progress monitor and disables the widgets while refreshing is running 
