[JBIDE-8250] all error-responses from server indicate that the credentials test failed (was: only 403 was a connection error).
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28628 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,9 @@
+2011-01-26  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewCloudConnectionWizard.java 
+	(performTest): 
+	[JBIDE-8250] all error-responses from server indicate that the credentials test failed (was: only 403 was a connection error).
+
 2011-01-25  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* plugin.xml: 
