[JBIDE-8250] - renamed Driver to DeltaCloudDriver, renamed ServerType to Driver - moved driver unmarshalling to APIUnmarshaller - added tests for APIUnmarshaller
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28649 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,5 +1,11 @@
 2011-01-27  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/deltacloud/core/client/DeltaCloudClientImpl.java (getServerType): 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java (getDriver): 
+	[JBIDE-8250] 
+	- renamed Driver to DeltaCloudDriver, renamed ServerType to Driver
+	- moved driver unmarshalling to APIUnmarshaller
+	- added tests for APIUnmarshaller
 	* src/org/jboss/tools/deltacloud/core/client/HttpStatusCode.java (UNAUTHORIZED): 
 	* src/org/jboss/tools/deltacloud/core/client/DeltaCloudClientImpl.java (throwOnHttpErrors): 
 	[JBIDE-8250] authorization error is status code 401 (was: 403)
