--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,11 @@
+2011-01-27  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java 
+	(KeyValidator.validate): 
+	(KeyValidator.isKeyKnowToSsh): 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstanceWizard.java (performFinish):
+	[JBIDE-8254] replaced the warning dialog by a similar decoration to the key text field. Warning is displayed in the title area and in the tooltip of the decoration
+
 2011-01-26  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewCloudConnectionWizard.java 
