[JBIDE-8254] replaced the warning dialog by a similar decoration to the key text field. Warning is displayed in the title area and in the tooltip of the decoration
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28654 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -4,7 +4,8 @@
 	(KeyValidator.validate): 
 	(KeyValidator.isKeyKnowToSsh): 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstanceWizard.java (performFinish):
-	[JBIDE-8254] replaced the warning dialog by a similar decoration to the key text field. Warning is displayed in the title area and in the tooltip of the decoration
+	[JBIDE-8254] replaced the warning dialog by a similar decoration to the key text field. 
+	Warning is displayed in the title area and in the tooltip of the decoration
 
 2011-01-26  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
