[JBIDE-8253] checking relative ssh private key entries now, too
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28655 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,11 @@
 2011-01-27  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/SshPrivateKeysPreferences.java 
+	(contains): 
+	(getAbsoluteKeyPath): 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java 
+	(KeyValidator.isKeyKnowToSsh): 
+	[JBIDE-8253] checking relative ssh private key entries now, too
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java 
 	(KeyValidator.validate): 
 	(KeyValidator.isKeyKnowToSsh): 
