[JBIDE-8259] added content proposals for cloud name, cloud url, username
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28764 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-31  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/CloudConnectionPage.java (createControl): 
+	[JBIDE-8259] added content proposals for cloud name, cloud url, username
+
 2011-01-27  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/SshPrivateKeysPreferences.java 
