--- a/deltacloud/plugins/org.jboss.tools.deltacloud.integration/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.integration/ChangeLog
@@ -1,3 +1,11 @@
+2011-02-01  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/integration/wizard/CreateServerFromRSEJob.java 
+	(createServerCheckRemoteDetails): 
+	(createServerSetDetailsNow): 
+	* src/org/jboss/tools/deltacloud/integration/rse/util/RSEUtils.java (createConnectionName): 
+	[JBIDE-8292] Server Adapter and RSE now use instance alias as name
+
 2010-12-27  adietisheim  <adietisheim@adietisheim-thinkpad>
 
 	* META-INF/MANIFEST.MF: 
