--- a/deltacloud/plugins/org.jboss.tools.deltacloud.integration/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.integration/ChangeLog
@@ -1,5 +1,10 @@
 2011-02-01  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/deltacloud/integration/wizard/RSEandASWizardPage.java 
+	(CREATE_RSE_PREF_KEY): 
+	(CREATE_SERVER_PREF_KEY): 
+	(createControl): 
+	[JBIDE-8291] Server adapter is not created by default any more	
 	* src/org/jboss/tools/deltacloud/integration/wizard/CreateServerFromRSEJob.java 
 	(createServerCheckRemoteDetails): 
 	(createServerSetDetailsNow): 
