[JBIDE-8148] moved cloud creation and cloud edit to background jobs
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28833 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,13 @@
+2011-02-01  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewCloudConnectionWizard.java 
+	(performFinish): 
+	(createCloud): 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/EditCloudConnectionWizard.java 
+	(performFinish): 
+	(editCloud): 
+	[JBIDE-8148] moved cloud creation and cloud edit to background jobs
+
 2011-01-31  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/CloudConnectionPage.java (createControl): 
