--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,7 @@
 2011-02-02  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/FindImagePage.java (onImageDoubleclick): 
+	[JBIDE-8310] added choosing an image by double clicking it
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java (createWidgets): 
 	[JBIDE-8309] fixed layout for image text field
 
