--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,9 @@
 2011-02-03  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/InstanceView.java (propertyChange): 
+	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/ImageView.java (propertyChange): 
+	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementTableView.java (updateFilteredLabel): 
+	[JBIDE-8323] updating filtered label now on cloud change and on filter change.
 	* src/org/jboss/tools/deltacloud/ui/views/DeltaCloudInstanceColumns.java (DeltaCloudInstanceColumns): 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties: 
 	[JBIDE-8319] added columns imageId, ownerId, key, realm and profile to instance view. 
