https://issues.jboss.org/browse/JBIDE-6825 Handle unknown BPEL elements
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29019 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpel/plugins/org.eclipse.bpel.validator/src/org/eclipse/bpel/validator/rules/messages.properties
+++ b/bpel/plugins/org.eclipse.bpel.validator/src/org/eclipse/bpel/validator/rules/messages.properties
@@ -922,3 +922,15 @@ BPELC_UNKNOWN_EXTENSION__ACTIVITY.fix = Remove the Extension Activity <{0}> or c
 BPELC_MISSING_EXTENSION__ACTIVITY.summary = Extension Activity element <{0}> must have exactly one child element.
 BPELC_MISSING_EXTENSION__ACTIVITY = Extension Activity element <{0} name="{1}"> must have exactly one child element.
 BPELC_MISSING_EXTENSION__ACTIVITY.fix = Make sure the Extension Activity element <{0}> has exactly one child element that is supported by this implementation
+#
+# Bugzilla 324165
+# https://issues.jboss.org/browse/JBIDE-6825
+#
+# ------------- Unknown BPEL Element ---------------------
+#  BPELC_UNKNOWN__ELEMENT
+#   {0}: node
+#   {1}: namespace URI
+#
+BPELC_UNKNOWN__ELEMENT.summary = BPEL element <{0}> is not supported.
+BPELC_UNKNOWN__ELEMENT = BPEL element <{0}> in namespace "{1}" is not supported by this implementation.
+BPELC_UNKNOWN__ELEMENT.fix = Remove the element <{0}> or contact the vendor to obtain the necessary plug-in(s)
