[JBDS-1529] renamed component and version keys so that they dont mention "JBoss Tools"
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@29062 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/usage/plugins/org.jboss.tools.usage/src/org/jboss/tools/usage/internal/preferences/messages.properties
+++ b/usage/plugins/org.jboss.tools.usage/src/org/jboss/tools/usage/internal/preferences/messages.properties
@@ -1,8 +1,8 @@
 UsageReportPreferencePage_ReportedValues=Reported Values
 UsageReportPreferencePage_CurrentUsageHit=Current usage reported on\: 
 UsageReportPreferencePage_FirstUsageHit=First usage reported on\: 
-UsageReportPreferencePage_JBossToolsComponents=JBoss Tools Components\: 
-UsageReportPreferencePage_JBossToolsVersion=JBoss Tools Version\: 
+UsageReportPreferencePage_JBossToolsComponents=Components\: 
+UsageReportPreferencePage_JBossToolsVersion=Version\: 
 UsageReportPreferencePage_LastUsageHit=Last usage reported on\: 
 UsageReportPreferencePage_Locale=Locale\: 
 UsageReportPreferencePage_NumberOfUsageHits=Number of usage-hits\: 
