new icons and business task
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29087 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpmn/plugins/org.jboss.tools.bpmn2.process.diagram/messages.properties
+++ b/bpmn/plugins/org.jboss.tools.bpmn2.process.diagram/messages.properties
@@ -180,3 +180,12 @@ NavigatorGroupName_ScriptTask_2017_incominglinks=incoming links
 NavigatorGroupName_ScriptTask_2017_outgoinglinks=outgoing links
 NavigatorGroupName_ScriptTask_3016_incominglinks=incoming links
 NavigatorGroupName_ScriptTask_3016_outgoinglinks=outgoing links
+BusinessRuleTask4CreationTool_title=Business Rule Task
+BusinessRuleTask4CreationTool_desc=
+SubProcess5CreationTool_title=Sub-Process
+NavigatorGroupName_BusinessRuleTask_2018_incominglinks=incoming links
+NavigatorGroupName_BusinessRuleTask_2018_outgoinglinks=outgoing links
+NavigatorGroupName_BusinessRuleTask_3017_incominglinks=incoming links
+NavigatorGroupName_BusinessRuleTask_3017_outgoinglinks=outgoing links
+NavigatorGroupName_IntermediateCatchEvent_3018_incominglinks=incoming links
+NavigatorGroupName_IntermediateCatchEvent_3018_outgoinglinks=outgoing links
