JBIDE-8433 https://issues.jboss.org/browse/JBIDE-8443
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29239 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/common/plugins/org.jboss.tools.common.model/src/org/jboss/tools/common/model/plugin/messages.properties
+++ b/common/plugins/org.jboss.tools.common.model/src/org/jboss/tools/common/model/plugin/messages.properties
@@ -7,6 +7,7 @@ CONSTRAINT_INTEGER = must be an integer
 CONSTRAINT_NONEMPTY = cannot be empty
 CONSTRAINT_NO_JAVA_KEYWORD = is a Java keyword
 CONSTRAINT_JAVA_NAME = is not a Java name
+CONSTRAINT_NMTOKEN = is not a valid NMToken
 CONSTRAINT_INTEGER_OR_LIST = must be an integer or be selected from the list
 CONSTRAINT_RED_HAT_TEMPLATE_NAME = is not an Red Hat project template name
 CONSTRAINT_XML_NAME = is not xml name
