[JBIDE-8333] now persisting last selected realm and profile per cloud.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29244 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,17 @@
+2011-02-18  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/core/DeltaCloudManager.java 
+	(loadCloud): 
+	(printCloud): 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java 
+	(lastRealmName): 
+	(lastProfileId): 
+	(setLastProfileId): 
+	(getLastProfileId): 
+	(getLastRealmName): 
+	(setLastRealmName): 
+	[JBIDE-8333]
+
 2011-02-15  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java (update): 
