[JBIDE-8333] now persisting last selected realm and profile per cloud.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29245 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.integration/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.integration/ChangeLog
@@ -1,3 +1,12 @@
+2011-02-18  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/integration/wizard/RSEandASWizardPage.java 
+	(storeSelection): 
+	(verifyPageComplete): 
+	(getSelectionIndex): 
+	(fillRuntimeTypeCombo): 
+	[JBIDE-8333] now persisting last selected realm and profile per cloud.
+	
 2011-02-15  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/integration/wizard/CreateRSEFromInstanceJob.java (runRSEJob): 
